# chunking_docs

./: .gitignore  CONTRIBUTORS.md  README.md  docker-compose.postgres.yml  docker-compose.qdrant.yml  pyproject.toml
docs/: architecture.md  seoul_plan_observations.md
examples/: retrieval_cases.jsonl  section_map.jsonl  seoul_plan_retrieval_cases.jsonl  seoul_plan_seed_annotations.jsonl
scripts/: download_seoul_plan.py
src/chunking_docs/: __init__.py  cli.py  io.py  pipeline.py  runtime.py
src/chunking_docs/analysis/: characterize.py  chunking_defaults.py  pdf_profile.py  qdrant_defaults.py  (+1 more)
tests/: test_annotations.py  test_assets_and_triples.py  test_bm25.py  test_characterize_package.py  test_chunking_comparison_gate.py  test_chunking_quality.py  test_chunking_sweep.py  test_compare_chunking.py  test_evaluation.py  test_experiment_report.py  test_fusion_sweep.py  test_graph_export.py  test_graph_quality.py  test_graph_repair.py  test_hf_vlm.py  test_ingestion_readiness.py  test_local_hybrid.py  test_manual_annotations.py  test_multimodal_chunks.py  test_package_delta.py  test_paddle_ocr.py  test_pdf_profile.py  test_pipeline_embeddings.py  test_postgres_records.py  test_postgres_runtime.py  test_public_audit.py  test_qdrant_hybrid.py  test_qdrant_store.py  test_rag_context.py  test_rag_context_quality.py  test_records_and_fusion.py  test_rerank.py  test_retrieval_case_audit.py  test_retrieval_casegen.py  test_retrieval_config.py  test_retrieval_diagnostics.py  test_retrieval_gate.py  test_runtime_doctor.py  test_section_map.py  test_semantic_splitter.py  (+6 more)
(+68 files in other folders)
